Closed Bug 1884297 Opened 1 year ago Closed 1 year ago

tools/profiler/core/platform.cpp:118:12: fatal error: 'nsCocoaFeatures.h' file not found

Categories

(Core :: Gecko Profiler, defect)

Unspecified
iOS
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When enabling the profiler and building with --enable-project=mobile/ios:

 0:03.86 /tmp/gecko-ios/tools/profiler/core/platform.cpp:118:12: fatal error: 'nsCocoaFeatures.h' file not found
 0:03.86   118 | #  include "nsCocoaFeatures.h"
 0:03.86       |            ^~~~~~~~~~~~~~~~~~~
 0:05.44 1 error generated.

Once past that:

 0:04.00 /tmp/gecko-ios/tools/profiler/core/platform-macos.cpp:18:10: fatal error: 'libproc.h' file not found
 0:04.00    18 | #include <libproc.h>
 0:04.00       |          ^~~~~~~~~~~

And enable the profiler when targeting iOS.

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/d1efeb6de184 Switch profiler to use TASK_POWER_INFO instead of proc_pidinfo. r=profiler-reviewers,florian
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: