Bug 1884297 - Switch profiler to use TASK_POWER_INFO instead of proc_pidinfo. r=profiler-reviewers,florian

And enable the profiler when targeting iOS.

Differential Revision: https://phabricator.services.mozilla.com/D204000