tools/profiler/core/platform.cpp
@@ -114,7 +114,7 @@
 #  include "mozilla/jni/Refs.h"
 #endif
 
-#if defined(GP_OS_darwin)
+#if defined(XP_MACOSX)
 #  include "nsCocoaFeatures.h"
 #endif
 
@@ -2805,7 +2805,7 @@ static PreRecordedMetaInformation PreRecordMetaInformation(
       !NS_FAILED(res) && http) {
     Unused << http->GetPlatform(info.mHttpPlatform);
 
-#if defined(GP_OS_darwin)
+#if defined(XP_MACOSX)
     // On Mac, the http "oscpu" is capped at 10.15, so we need to get the real
     // OS version directly.
     int major = 0;
